@@ -14,8 +14,9 @@
 function marker = mark_string_differences(s1, s2)
 
 error(nargchk(2, 2, nargin, 'struct'));
-if ~ischar(s1), error('s1 argument need be char'); end
-if ~ischar(s2), error('s2 argument need be char'); end
+isrowvector = @(v) isempty(v) || size(v, 1)==1;
+if ~isrowvector(s1) || ~ischar(s1), error('s1 need be row vector or empty, and of class char'); end
+if ~isrowvector(s2) || ~ischar(s2), error('s2 need be row vector or empty, and of class char'); end
 
 common_length = min(numel(s1), numel(s2));
 marker_length = max(numel(s1), numel(s2));
